# student_performance_tracker

./: .dockerignore  .gitignore  Dockerfile  README.md  application.py  portal.db  pyproject.toml  pytest.ini  requirements.txt  setup.py
