[project]
name = "EndToEndMLProject"
version = "0.1.0"
description = "This is my first End to end project in ml"
readme = "README.md"
requires-python = ">=3.11,<3.12"  # ← Limited Python version range
dependencies = [
    "catboost>=1.2.8,<1.3.0",
    "dill>=0.3.7,<0.5.0",
    "flask>=2.3.3,<4.0.0",
    "ipykernel>=6.29.5",
    "numpy>=1.24.3,<2.0.0",     
    "pandas>=1.5.3,<2.0.0",     
    "scikit-learn>=1.3.0,<1.8.0",
    "seaborn>=0.12.2",
    "xgboost>=1.7.6,<2.0.0",
    "gunicorn>=21.2.0",           
]

[dependency-groups]
dev = []  # ← Simplified to avoid conflicts

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"